base/services/frontend/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  hosts:
  - frontend
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 3000
      weight: 100
    timeout: 30s
    retries:
      attempts: 3
      perTryTimeout: 10s
